--- a/Tribut_Page.html
+++ b/Tribut_Page.html
@@ -1,3 +1,6 @@
+
+<!--Link to guidelines: https://www.freecodecamp.org/learn/responsive-web-design/responsive-web-design-projects/build-a-tribute-page -->
+
 <main id="main">
 <h1 id="title">Helio Gracie</h1>
 <p>The creator of the most efficient martial art in history </p>
